# esp_3d_printer

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  cz.yaml  partitions.csv  sdkconfig  sdkconfig.old
components/adc_driver/: CMakeLists.txt  adc.c
components/adc_driver/include/: adc.h
components/esp_ethernet/: CMakeLists.txt  Kconfig  esp_ethernet.cpp  readme.md
components/esp_ethernet/include/: esp_ethernet.hpp
components/esp_ethernet/proto/: ethernet.proto
components/esp_ethernet/test/: test_ethernet.hpp
components/esp_filesystem/: CMakeLists.txt  esp_filesystem.cpp
components/esp_filesystem/include/: File.hpp  Folder.hpp  Item.hpp  esp_filesystem.hpp
components/esp_filesystem/test/: CMakeLists.txt  test_esp_filesystem.cpp
components/esp_filesystem/test/test_data/: testfile_local_1.txt
components/esp_filesystem/test/test_data/test_dir/: testfile_local_2.txt
components/esp_i2c/: CMakeLists.txt  i2c.c
components/esp_i2c/include/: i2c.h
components/esp_printer/: CMakeLists.txt  esp_printer.cpp
components/esp_printer/include/: esp_printer.hpp
components/esp_serial/: CMakeLists.txt  esp_serial.cpp
components/esp_serial/include/: esp_serial.hpp
components/esp_serial/test/: test_serial_rs485.hpp
components/esp_settings/: .gitignore  CMakeLists.txt  README.md  esp_settings.cpp
components/esp_settings/include/: esp_settings.hpp
components/esp_settings/script/: build_protos.py
components/esp_socket/: CMakeLists.txt  socket_client_tcp.cpp  socket_server_tcp.cpp  socket_tcp.cpp
components/esp_socket/include/: socket_client_tcp.hpp  socket_server_tcp.hpp  socket_tcp.hpp
components/esp_test/: CMakeLists.txt  esp_generic_test.cpp  esp_test.cpp
components/esp_test/include/: esp_generic_test.hpp  esp_test.hpp
components/esp_wifi_driver/: CMakeLists.txt  esp_wifi_driver.cpp
components/esp_wifi_driver/include/: esp_wifi_driver.hpp
components/esp_wifi_driver/proto/: wifi.proto
components/firmware_update/: CMakeLists.txt  firmware_update.cpp
components/firmware_update/include/: firmware_update.hpp
components/firmware_update/page/panels/: Test1Panel.js
components/gcode_interpreter/: CMakeLists.txt  gcode_interpreter.c
components/gcode_interpreter/include/: gcode_interpreter.h
components/http_server/: .gitignore  CMakeLists.txt  package-lock.json  package.json  webpack.common.js
components/http_server/backend/: http_server.cpp
components/http_server/backend/include/: http_server.hpp
components/http_server/scripts/: collect_files.mjs  move_to_build.mjs  utils.mjs
components/http_server/src/base/: utils.js
components/http_server/src/base/field/: ButtonField.css  ButtonField.js  Field.css  Field.js  FileField.css  FileField.js  IPField.css  IPField.js  IntegerField.css  IntegerField.js  LongTextField.css  LongTextField.js  PasswordField.css  PasswordField.js  SelectField.css  SelectField.js  SwitchField.css  SwitchField.js  TextField.css  TextField.js  TimeField.js  index.js
components/http_server/src/base/header/: Header.css  Header.js
components/http_server/src/base/page/: Page.css  Page.js
components/http_server/src/base/panel/: Panel.css  Panel.js  SwitchPanel.css  SwitchPanel.js  index.js
components/http_server/src/base/panel/common/: ConfigPanel.js  EthernetPanel.js  FirmwarePanel.js  GeneralPanel.js  InfoPanel.js  LoginPanel.js  ServerPanel.js  TestPanel.js  WifiPanel.js
components/http_server/src/base/sidebar/: Sidebar.css  Sidebar.js  SidebarTab.css  SidebarTab.js  index.js
components/http_server/src/base/switch/: Switch.css  Switch.js
components/http_server/src/base/tooltip/: Tooltip.css  Tooltip.js  index.js
components/http_server/src/sample/: config.js  config.json  index.js
components/http_server/src/sample/panels/: EthPanel.js  MainPanel.js  TestPanel.js  TestPanel2.js  index.js
components/http_server/src/styles/: colors.css  fonts.css
components/modbus_gateway/: CMakeLists.txt  modbus_gateway.cpp
components/modbus_gateway/include/: modbus_converter.hpp  modbus_gateway.hpp
components/modbus_gateway/proto/: modbus_gateway.proto
components/pcf8574/: CMakeLists.txt  pcf8574.c
components/pcf8574/include/: pcf8574.h
components/pid_controller/: CMakeLists.txt  pid.c
components/pid_controller/include/: pid.h
components/pwm_driver/: CMakeLists.txt  pwm.c
components/pwm_driver/include/: pwm.h
components/sdcard/: CMakeLists.txt  sdcard.c
components/sdcard/include/: sdcard.h
components/stepper_diver/: CMakeLists.txt  stepper_driver.cpp  stepper_timer.cpp
components/stepper_diver/include/: stepper_driver.hpp  stepper_timer.hpp
components/stepper_driver/: CMakeLists.txt  stepper_driver.cpp  stepper_timer.cpp
components/stepper_driver/include/: stepper_driver.hpp  stepper_timer.hpp
components/thermistor/: CMakeLists.txt  thermistor.c
components/thermistor/include/: thermistor.h
components/web_interface/: package-lock.json  package.json  webpack.common.js
components/web_interface/src/: Fonts.css  index.js
components/web_interface/src/components/Field/: Field.js  Field.module.css  SwitchField.js  TextField.js  index.js
components/web_interface/src/components/FileExplorer/: FileExplorer.js
components/web_interface/src/components/Panel/: Panel.js  Panel.module.css  index.js
components/web_interface/src/components/Switch/: Switch.js  (+1 more)
components/ws_log/: CMakeLists.txt  ws_log.cpp
components/ws_log/include/: ws_log.hpp
components/ws_log/page/: log.js
components/ws_log/page/panels/: LogPanel.css  LogPanel.js
main/: CMakeLists.txt  app_info.cpp  app_info.hpp  http_handlers.cpp  http_handlers.hpp  main.cpp  mdb_relay_io.c  mdb_relay_io.h
main/test/: test.cpp  test.hpp
page/: config.js  index.js
page/panels/: ChannelPanel.js  MainPanel.js
proto/: main.proto
script/: bundle_binaries.py  compress_server.py  download_filesystem.sh  update_firmware.py  ws_log.py
test/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
test/main/: CMakeLists.txt  cubic_3d_printer_test.c  idf_component.yml
