idf_component_register( SRCS
                            "main.cpp"
                            "mdb_relay_io.c"
                            "http_handlers.cpp"
                            "app_info.cpp"
                            "test/test.cpp"

                        INCLUDE_DIRS
                            "."
                            "test"
)
